# logi-mcp-server-demo

./: Dockerfile  pyproject.toml  smithery.yaml
src/logi_mcp/: __main__.py  server.py
