[project]
name = "logi-mcp-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "openpyxl>=3.1.2",
    "typer>=0.15.1",
    "httpx>=0.28.1",
]

[project.scripts]
logi-mcp-server = "logi_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logi_mcp"]

[tool.hatch.build]
packages = ["src/logi_mcp"]
